# QSM-CI

./: .cirun.yml  .gitignore  CLAUDE.md  CONTRACT.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  get-maps.py  metrics.py  parse_bids.py  pyproject.toml  qsm-forward-params.json  recon_and_eval.sh  run.py  run.sh  setup.py  stages.yml  test.sh  upload.sh
.github/scripts/: publish-zenodo.py
.github/workflows/: auto-run.yml  build-config.json  ci.yml  combine.yml  eval-image.yml  evaluate.yml  hf-check.yml  image-access.yml  main.yml  matlab-compile.yml  migrate-volumes.yml  objectstorage.yml  osf-check.yml  pages.yml  pipeline.yml  publish-zenodo.yml  qsm-forward-params.json  release.yml  run-algos.yml  score-parallel.yml  score.yml  squash-volumes.yml
algorithms/_base/: Dockerfile  README.md
algorithms/_qsmxt/: Dockerfile  README.md
algorithms/autoqsm/: Dockerfile  README.md  algorithm.yml  predict.py  run.sh
algorithms/example-tkd/: algorithm.yml  metadata.yml  run.sh
algorithms/fansi/: BUILD.md  README.md  algorithm.yml  recon.m
algorithms/harperella/: README.md  algorithm.yml  metadata.yml  run.sh
algorithms/hd-qsm/: BUILD.md  README.md  algorithm.yml  recon.m
algorithms/iharperella/: README.md  algorithm.yml  metadata.yml  run.sh
algorithms/ilsqr/: README.md  algorithm.yml  metadata.yml  run.sh
algorithms/inr-qsm/: BUILD.md  Dockerfile  README.md  algorithm.yml  inr_qsm_infer.py  run.sh
algorithms/iqsm/: Dockerfile  README.md  algorithm.yml  run.sh
algorithms/iqsm-plus/: Dockerfile  README.md  algorithm.yml  run.sh
algorithms/ir2qsm/: BUILD.md  README.md  algorithm.yml  ir2qsm_infer.py  run.sh
algorithms/ismv/: README.md  algorithm.yml  metadata.yml  run.sh
algorithms/l1-qsm/: BUILD.md  README.md  algorithm.yml  recon.m
algorithms/laplacian-fieldmap/: algorithm.yml  metadata.yml  recon.py
algorithms/lbv/: README.md  algorithm.yml  metadata.yml  run.sh
algorithms/lpcnn/: Dockerfile  README.md  algorithm.yml  recon.py  run.sh
algorithms/matlab-bfrnet/: BUILD.md  README.md  algorithm.yml  recon.m
algorithms/pdf/: run.sh  (+3 more)
algos/: bet_romeo_vsharp_rts.sh  romeo_nextqsm.sh  romeo_pdf_rts.sh  romeo_vsharp_rts.sh  tgv.sh
datasets/: cosmos_data.sh  cosmos_data_prep.py  head_phantom.sh  simple_phantom.sh
docs/: matlab.md  submitting.md
eval/: Cargo.toml  Dockerfile  README.md  qsm_eval.py  requirements.txt  test_metrics.py
eval/src/: main.rs
metrics/: metrics.py  metrics.sh
qsm_ci/: __init__.py  cli.py  data.py  eval.py  interfaces.py  main.py  metrics.py  nipype.py  parse_bids.py  pydra.py  qsm_eval.py  registry.json  registry.py  run.py  runner.py  scaffold.py  stages.py  submit.py  templates.py  upload.py
results/: index.json
scripts/: combo_sweep.py  combo_sweep_report.py  crosscheck_qsmrs.sh  fetch_dataset.sh  fetch_groundtruth.sh  gen_algorithms.py  gen_manifest.py  merge_index.py  migrate_volumes_to_hf.py  pack_dataset.py  pipeline.py  pr_comment.sh  publish_dev_phantom.sh  publish_result.sh  publish_volumes.py  squash_hf_history.py  sweep.py  sweep_report.py
tests/: make_fixtures.py  test_interfaces.py  test_manifest.py  test_pipeline.py  test_registry.py  test_runner_help.py  test_stages_sync.py  test_submissions.py
utils/: parse_bids.py
web/: algorithms.json  index.html  leaderboard.html  methods.html  registry.json  running.html  submission.html  submit.html
(+213 files in other folders)
