[package]
name = "qsm-eval"
version = "0.1.0"
edition = "2021"
description = "Scorer for QSM-CI: computes challenge metrics for a reconstruction using the QSM.rs metrics."

[[bin]]
name = "qsm-eval"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# The metrics live in QSM.rs. This uses a local path for development; before publishing the
# qsm-eval image, switch to a pinned git rev so the Docker build is self-contained:
#   qsm-core = { git = "https://github.com/astewartau/QSM.rs", rev = "<companion-PR-commit>" }
# Requires the QSM.rs "promote metrics to public qsm_core::metrics" change to be merged.
qsm-core = { path = "../../../QSM.rs" }
